# sportpit-nuxt

./: .gitignore  cock.py
client/: app.vue  nuxt.config.ts  package.json
client/assets/: base.scss  functions.scss  mixins.scss  variables.scss
client/components/: ImageInput.vue  card.vue  cartHeaderButton.vue  cathegorySelect.vue  header.vue  mdPreview.vue  orderEntry.vue  responsiveGrid.vue  themeButton.vue
client/components/ui/: App.vue  (+21 more)
client/composables/: isMobile.ts  useAuth.ts  useCathegory.ts  useCols.ts  useGridColumns.ts  useOrder.ts  useProducts.ts
client/forms/: useLoginForm.ts
client/layouts/: default.vue
client/pages/: auth.vue  cart.vue  index.vue  login.vue
client/stores/: useCartStore.ts  useCatalogStore.ts  useCathegoryStore.ts  useLoginForm.ts  useProductForm.ts  useProductStore.ts
client/types/: cathegory.ts  orders.ts  product.ts
server/: alembic.ini  main.py  pyproject.toml
server/auth/: __init__.py
server/config/: __init__.py
server/db/: session.py
server/db/migrations/versions/: 225e9b0a2a93_initial_commit.py  24bc20799c55_product_added_count.py  32b351b3b25f_order_changed_created_at.py  516ef3c6104b_order_added_completed_column.py  73f87b6f420f_product_added_description.py  88e57e90387a_order_changed_created_at.py  d7201a41f8d1_product_changed_cost_to_str.py
server/models/: __init__.py
server/models/cathegory/: __init__.py  cathegory.py  order.py  product.py
server/models/user/: admin.py
server/routes/: __init__.py  admin_routes.py  routes.py
server/routes/auth/: __init__.py
server/schemas/: auth.py  order.py
(+19 files in other folders)
